sandbox/output
StringCalculatorTest.java:14: error: cannot find symbol
            new ParserWithDelimiterNewLineOrComma();
                ^
  symbol:   class ParserWithDelimiterNewLineOrComma
  location: class StringCalculatorTest
StringCalculatorTest.java:21: error: cannot find symbol
            new ParserWithDelimiterNewLineOrComma();
                ^
  symbol:   class ParserWithDelimiterNewLineOrComma
  location: class StringCalculatorTest
StringCalculatorTest.java:28: error: cannot find symbol
            new ParserWithDelimiterNewLineOrComma();
                ^
  symbol:   class ParserWithDelimiterNewLineOrComma
  location: class StringCalculatorTest
StringCalculatorTest.java:35: error: cannot find symbol
            new ParserWithDelimiterNewLineOrComma();
                ^
  symbol:   class ParserWithDelimiterNewLineOrComma
  location: class StringCalculatorTest
4 errors
